--- a/articles/virtual-machines/linux/index.yml
+++ b/articles/virtual-machines/linux/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: cynthn
   ms.author: cynthn
   ms.date: 09/19/2019
-  ms.openlocfilehash: 12c3447bc7e46e45d05711e1b0c7a59f8d8d0218
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: 5155b6196c6a7337877b8464775e179fb4aebb9f
+  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "77115823"
+  ms.lasthandoff: 07/23/2020
+  ms.locfileid: "87085514"
 landingContent:
 - title: 最新功能
   linkLists:
@@ -32,28 +32,28 @@ landingContent:
   - linkListType: quickstart
     links:
     - text: Azure CLI
-      url: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-cli
+      url: ./quick-create-cli.md
     - text: Azure 门户
-      url: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-portal
+      url: ./quick-create-portal.md
     - text: Azure PowerShell
-      url: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-powershell
+      url: ./quick-create-powershell.md
 - title: 分步指南
   linkLists:
   - linkListType: tutorial
     links:
     - text: 创建和管理 Linux VM
-      url: /azure/virtual-machines/linux/tutorial-manage-vm
+      url: ./tutorial-manage-vm.md
     - text: VM 磁盘
-      url: /azure/virtual-machines/linux/tutorial-manage-disks
-    - text: 自动配置 VM
-      url: /azure/virtual-machines/linux/tutorial-automate-vm-deployment
+      url: ./tutorial-manage-disks.md
+    - text: 自动执行 VM 配置
+      url: ./tutorial-automate-vm-deployment.md
     - text: 创建自定义 VM 映像
-      url: /azure/virtual-machines/linux/tutorial-custom-images
+      url: ./tutorial-custom-images.md
     - text: 使用虚拟网络管理 VM
-      url: /azure/virtual-machines/linux/tutorial-virtual-network
+      url: ./tutorial-virtual-network.md
 - title: 自定进度训练
   linkLists:
   - linkListType: learn
     links:
     - text: " 在 Azure 中创建 Linux 虚拟机"
-      url: https://docs.microsoft.com/learn/modules/create-linux-virtual-machine-in-azure/
+      url: /learn/modules/create-linux-virtual-machine-in-azure/
